Se agrega uso de localstorage para mantener sesion iniciada y boton de logout

--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -17,6 +17,7 @@
         routerLink="/"
         routerLinkActive="mat-accent"
         *ngIf="isLogin === true"
+        (click)="onLogout()"
         >Logout</a
       >
       <a
