Se adicionan interceptor y middleware para evitar acceso no autorizado.

--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -7,7 +7,7 @@
     <li>
       <a
         mat-button
-        routerLink="/add"
+        routerLink="/transaction"
         routerLinkActive="mat-accent"
         *ngIf="isLogin === true"
         >Add transaction</a
