--- a/frontend/src/app/transactions-history/transactions-history.component.html
+++ b/frontend/src/app/transactions-history/transactions-history.component.html
@@ -7,16 +7,7 @@
   <mat-card-subtitle>{{ item.amount }}</mat-card-subtitle>
   <mat-card-subtitle>{{ item.price }}</mat-card-subtitle>
 
-  <mat-card-actions align="end" *ngIf="isAuth === true">
-    <!-- <button
-      mat-stroked-button
-      color="primary"
-      [routerLink]="['/edit', item._id]"
-    >
-      EDITAR
-    </button> -->
-    <!-- <button mat-button color="warn" (click)="onDelete(item.id)">
-      ELIMINAR
-    </button> -->
+  <mat-card-actions align="end">
+    <button mat-button color="warn" (click)="onDelete(item.id)">ELIMINAR</button>
   </mat-card-actions>
 </mat-card>
