--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,6 @@
-<app-header></app-header>
-<main>
-  <router-outlet></router-outlet>
-</main>
+<body>
+  <app-header></app-header>
+  <main>
+    <router-outlet></router-outlet>
+  </main>
+</body>
