--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -25,6 +25,7 @@
         />
         <button
           mat-icon-button
+          type="button"
           matSuffix
           (click)="hide = !hide"
           [attr.aria-label]="'Hide password'"
