--- a/frontend/src/app/signup/signup.component.html
+++ b/frontend/src/app/signup/signup.component.html
@@ -75,6 +75,7 @@
         />
         <button
           mat-icon-button
+          type="button"
           matSuffix
           (click)="hide = !hide"
           [attr.aria-label]="'Hide password'"
