Se agrega boton Select a selección de rol durante creacion de usuario y se ajustan rutas de creación de transacciones

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,7 +8,7 @@
       <a mat-button id="username" style="color: #18b0d6">{{ username }}</a>
       <a
         mat-button
-        routerLink="/transaction"
+        routerLink="/newtransaction"
         routerLinkActive="mat-accent"
         *ngIf="isLogin === true && userRole === 'user'"
         >Add transaction</a
