--- a/src/app/create-user/create-user.component.html
+++ b/src/app/create-user/create-user.component.html
@@ -87,14 +87,11 @@
     </div>
     <div>
       <mat-form-field appearance="fill">
-        <mat-label>Role</mat-label>
-        <input
-          matInput
-          [ngModel]="user.role"
-          #role="ngModel"
-          name="role"
-          required
-        />
+        <mat-label>User role</mat-label>
+        <mat-select [ngModel]="user.role" required name="role">
+          <mat-option value="user">User</mat-option>
+          <mat-option value="client">Client</mat-option>
+        </mat-select>
       </mat-form-field>
     </div>
     <div>
