--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,6 @@
 body {
   background-image: url("../app/login/img/login_bg.jpg");
   background-size: cover;
+  background: #d5d2d2;
+  background-repeat: repeat;
 }
