--- a/src/app/transactions-history/transactions-history.component.html
+++ b/src/app/transactions-history/transactions-history.component.html
@@ -1,31 +1,50 @@
-<mat-card *ngFor="let item of transactionsById">
-  <mat-card-title>Identification: {{ item.identification }}</mat-card-title>
-  <mat-card-subtitle>Fuel type: {{ item.fueltype }}</mat-card-subtitle>
-  <mat-card-subtitle>Payment method: {{ item.paymethod }}</mat-card-subtitle>
-  <mat-card-subtitle>Amount: {{ item.amount }} gal.</mat-card-subtitle>
-  <mat-card-subtitle>Price: ${{ item.price }}</mat-card-subtitle>
-
-  <mat-card-actions align="end">
+<table
+  mat-table
+  [dataSource]="dataSource"
+  class="mat-elevation-z8"
+  #tabla1
+  *ngIf="userRole !== 'client'"
+>
+  <ng-container matColumnDef="identification">
+    <th mat-header-cell *matHeaderCellDef>Identification</th>
+    <td mat-cell *matCellDef="let transaction">
+      {{ transaction.identification }}
+    </td>
+  </ng-container>
+  <ng-container matColumnDef="fueltype">
+    <th mat-header-cell *matHeaderCellDef>Fuel type</th>
+    <td mat-cell *matCellDef="let transaction">{{ transaction.fueltype }}</td>
+  </ng-container>
+  <ng-container matColumnDef="paymethod">
+    <th mat-header-cell *matHeaderCellDef>Payment method</th>
+    <td mat-cell *matCellDef="let transaction">{{ transaction.paymethod }}</td>
+  </ng-container>
+  <ng-container matColumnDef="amount">
+    <th mat-header-cell *matHeaderCellDef>Amount</th>
+    <td mat-cell *matCellDef="let transaction">
+      {{ transaction.amount }} gal.
+    </td>
+  </ng-container>
+  <ng-container matColumnDef="price">
+    <th mat-header-cell *matHeaderCellDef>Price</th>
+    <td mat-cell *matCellDef="let transaction">$ {{ transaction.price }}</td>
+  </ng-container>
+  <ng-container matColumnDef="actions">
+    <th mat-header-cell *matHeaderCellDef>Actions</th>
     <button
       mat-raised-button
       color="warn"
-      (click)="onDelete(item.id)"
-      *ngIf="userRole !== 'client'"
+      *matCellDef="let transaction"
+      (click)="onDelete(transaction.id)"
     >
       ELIMINAR
     </button>
-  </mat-card-actions>
-</mat-card>
-<mat-card *ngFor="let item of transactions">
-  <mat-card-title>Identification: {{ item.identification }}</mat-card-title>
-  <mat-card-subtitle>Fuel type: {{ item.fueltype }}</mat-card-subtitle>
-  <mat-card-subtitle>Payment method: {{ item.paymethod }}</mat-card-subtitle>
-  <mat-card-subtitle>Amount: {{ item.amount }} gal.</mat-card-subtitle>
-  <mat-card-subtitle>Price: ${{ item.price }}</mat-card-subtitle>
+  </ng-container>
 
-  <mat-card-actions align="end">
-    <button mat-raised-button color="warn" (click)="onDelete(item.id)">
-      ELIMINAR
-    </button>
-  </mat-card-actions>
-</mat-card>
+  <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+  <tr mat-row *matRowDef="let dataSource; columns: columnsToDisplay"></tr>
+</table>
+<mat-paginator
+  [pageSizeOptions]="[5, 10, 15]"
+  showFirstLastButtons=""
+></mat-paginator>
